# porua

./: .gitignore  BACKGROUND_SCRIPT_MIGRATION_PLAN.md  CODE_ASSESSMENT.md  FEATURE_PLAN.md  FIREFOX_COMPAT_SUMMARY.md  LICENSE  PROTOTYPE_FILES_MANIFEST.txt  PR_DESCRIPTION.md  README.md  RESTRUCTURING_PLAN.md  SERVER_ARCHITECTURE_ASSESSMENT.md  UNIFIED_PLAYBACK_ARCHITECTURE.md  package-lock.json
.githooks/: pre-commit
.github/: FUNDING.yml
.github/workflows/: desktop-release.yml  plugin-publish.yml  plugin-release.yml  plugin-test.yml  server-release.yml  server-test.yml
plugin/: .gitignore  CHANGELOG.md  COVERAGE_REPORT.txt  COVERAGE_SUMMARY.md  MANUAL_TESTING.md  README.md  RELEASING.md  TEST_COVERAGE_ANALYSIS.md  TEST_COVERAGE_INDEX.md  TEST_IMPLEMENTATION_GUIDE.md  manifest.firefox.json  manifest.json  package-lock.json  package.json  popup.html  popup.js  vitest.config.js  web-ext-config.cjs
plugin/packaging/: PACKAGING.md  RELEASE_CHECKLIST.md
plugin/scripts/: lint-firefox.sh  run-firefox.sh
plugin/src/: content.css  content.js  crypto-utils.js
plugin/src/background/: service-worker.js
plugin/src/background/api/: StreamHandler.js
plugin/src/background/cache/: CacheError.js  CacheEvictionPolicy.js  CacheKeyGenerator.js  CacheRepository.js  CacheService.js  CacheSizeManager.js  IndexedDBAdapter.js  constants.js
plugin/src/background/messages/: MessageRouter.js  protocol.js
plugin/src/background/messages/handlers/: CacheHandlers.js  TTSHandlers.js  index.js
plugin/src/content/: index.js
plugin/src/content/audio/: AudioPlayer.js  AudioQueue.js  AudioRegistry.js  ChunkId.js  ChunkMetadata.js  HotCache.js  StreamParser.js  WarmCache.js
plugin/src/content/controllers/: ContinuousPlaybackController.js  PlaybackSessionManager.js
plugin/src/content/prefetch/: PrefetchManager.js
plugin/src/content/queue/: ParagraphQueue.js
plugin/src/content/state/: PlaybackState.js
plugin/src/content/ui/: HighlightManager.js  PlayButton.js  PlayerControl.js
plugin/src/content/utils/: DOMTextMapper.js  dom.js  events.js  phraseMatcher.js
plugin/src/content/utils/__tests__/: phraseMatcher.test.js
plugin/src/popup/: AudioPreview.js  CacheStats.js  SettingsForm.js  SkipControl.js  SpeedControl.js  StatusMessage.js  VoiceSelector.js  index.js
plugin/src/shared/api/: BackgroundTTSClient.js  MultipartStreamHandler.js  ResponseHandler.js  TTSClient.js
plugin/src/shared/cache/: AudioCacheManager.js  CacheKeyGenerator.js  CacheStats.js  LRUCache.js  PersistentCache.js
plugin/src/shared/config/: README.md  readableElements.js
plugin/src/shared/crypto/: encryption.js
plugin/src/shared/services/: TTSService.js
plugin/src/shared/storage/: SettingsStore.js
plugin/src/shared/utils/: constants.js  debounce.js  domBuilder.js  elementValidation.js  errors.js  logger.js  throttle.js  timeout.js  validation.js
plugin/src/styles/: popup.css  variables.css
plugin/src/styles/content/: highlighting.css  play-button.css  player-control.css
plugin/tests/: setup.js
plugin/tests/fixtures/: stream-data.js
plugin/tests/integration/: highlighting-html-preservation.test.js  readable-tags.test.js  tts-service-client.test.js  voice-selector-playback.test.js
plugin/tests/mocks/: chrome.js
plugin/tests/unit/background/: service-worker.test.js
plugin/tests/unit/popup/: AudioPreview.test.js  CacheStats.test.js  SettingsForm.test.js  SkipControl.test.js  SpeedControl.test.js  StatusMessage.test.js  VoiceSelector.test.js
scripts/: install-hooks.sh  test-windows-cleanup.ps1  validate-version.sh
server/: .env.example  .gitignore  CONFIG.md  Cargo.toml  README.md  api_keys.txt.example
server/packaging/: INSTALL.md  PACKAGING.md  README-ESPEAK.md  build_package.sh  download_models.sh  install.sh
server/src/: auth.rs  chunking.rs  cli.rs  error.rs  lib.rs  main.rs  rate_limit.rs  server.rs
server/src/audio/: duration.rs  mod.rs  segmentation.rs  wav_utils.rs
server/src/config/: constants.rs  mod.rs
server/src/kokoro/: mod.rs  model_paths.rs  voice_config.rs
server/src/logging/: cleanup.rs  config.rs  integration_tests.rs  middleware.rs  mod.rs  paths.rs
server/src/models/: metadata.rs  mod.rs  requests.rs  responses.rs
server/src/services/: metadata_builder.rs  mod.rs  streaming.rs
server/src/text_processing/: mod.rs  normalization.rs  semantic_normalization.rs  sentence_splitting.rs
server/src/utils/: header_utils.rs  mod.rs  temp_file.rs  text_normalization.rs
server/tests/: rate_limit_test.rs  semantic_normalization_integration_test.rs  streaming_normalization_integration_test.rs  wav_duration_integration_test.rs
wrapper/: .gitignore  GENERATE_ICONS_ONCE.md  OVERLAY_PROTOTYPE_README.md  QUICK_REFERENCE.md  README.md  SETUP.md  TESTING_GUIDE.md  package.json  test-overlay.sh  test-page.html
wrapper/scripts/: generate-icons.sh
wrapper/src/: app.js  index.html  overlay.html  overlay.js  selection.html  selection.js  styles.css
wrapper/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  build-swift.sh  build.rs  create_custom_dmg.sh  create_dmg_background.py  tauri.conf.json
wrapper/src-tauri/icons/: .gitkeep-icns-ico  README.md  icon.icns
wrapper/src-tauri/src/: cleanup.rs  config.rs  installer.rs  main.rs  main_overlay_integration.rs  overlay_commands.rs  paths.rs  server.rs
wrapper/src-tauri/src/overlay/: mod.rs  screen_capture.rs  state.rs
wrapper/src-tauri/swift-src/: ScreenCapture-Bridging-Header.h  ScreenCapture.swift  module.modulemap
wrapper/src-tauri/tests/: test_uninstaller.ps1
wrapper/src-tauri/windows/: complete-cleanup.wxs
wrapper/src-tauri/wix/: main.wxs
(+49 files in other folders)
