[package]
name = "tts_server"
version = "0.1.0"
edition = "2021"

[dependencies]
kokoros = { git = "https://github.com/lucasjinreal/Kokoros.git" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = "0.1"
hound = "3.5"
deadpool = "0.12"
async-trait = "0.1"
dirs = "5.0"
unicode-normalization = "0.1"
governor = "0.6"
dashmap = "6.0"
dotenvy = "0.15"

[dev-dependencies]
tempfile = "3.8"
