[package]
name = "porua_server"
version = "0.1.1"
edition = "2021"

[[bin]]
name = "generate_samples"
path = "src/bin/generate_samples.rs"

[dependencies]
kokoros = { git = "https://github.com/lucasjinreal/Kokoros.git" }
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["macros"] }
tower-http = { version = "0.5", features = ["cors", "fs", "timeout"] }
tower = { version = "0.4", features = ["util"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
uuid = { version = "1.0", features = ["v4"] }
bytes = "1.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
futures = "0.3"
tokio-stream = "0.1"
hound = "3.5"
deadpool = "0.12"
async-trait = "0.1"
dirs = "5.0"
unicode-normalization = "0.1"
governor = "0.6"
dashmap = "6.0"
dotenvy = "0.15"
num2words = "0.3"
regex = "1.10"
lazy_static = "1.4"

# OpenSSL with vendored feature for cross-compilation
openssl = { version = "0.10", features = ["vendored"] }

[dev-dependencies]
tempfile = "3.8"
